k8s/manifests/insultgenerator/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: insult-app
  namespace: insult
  labels:
    app: insult-app
    app.kubernetes.io/part-of: insult-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: insult-app
      deployment: insult-app
  template:
    metadata:
      labels:
        app: insult-app
        deployment: insult-app
    spec:     
      containers:
        - name: insult-app
          image: 'quay.io/ajhajj/insult.gen:v1.0'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent      
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
