k8s/manifests/insultgenerator/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: insult-app
  namespace: insult
  labels:
    app: insult-app
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: insult-app
    deployment: insult-app
