k8s/manifests/insultgenerator/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: insult-app
  namespace: insult
  labels:
    app: insult-app
spec:
  to:
    kind: Service
    name: insult-app
    weight: 100
  port:
    targetPort: 8080-tcp
